--- a/style.css
+++ b/style.css
@@ -100,4 +100,11 @@ li:hover {
     padding-left: 10px;
     padding-right: 10px;
     border-radius: 100%;
+    margin-top: 10px;
+    margin-right: 5px;
+}
+
+.info {
+    padding-bottom: 5px;
+    color: grey;
 }
