--- a/style.css
+++ b/style.css
@@ -111,7 +111,10 @@ li:hover {
 }
 
 .hebergement {
-    width : 305px;
+    height: 60%;
+    display: inline-block;
+    margin: 0px;
+    padding: 0px;
 }
 
 .pop {
@@ -120,18 +123,43 @@ li:hover {
 
 .heb {
     box-shadow: 10px 5px 5px grey;
-    border:5px solid white;
-    width : 300px;
-    height : 150px;
-    overflow:hidden;
+    border: 2px solid white;
+    width: 30%;
+    height: 300px;
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    margin: 0px;
+    padding: 0px;
 }
 
 .h2_heb {
     color: black;
+    margin: 0px;
 }
 
 .div_heb {
     border:1px solid grey;
     background-color: gray;
     border-radius: 30px;
+}
+
+.carte {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+}
+
+.écrit_carte {
+    margin-bottom: 5%;
+    padding: 0px;
+}
+
+.fa-star {
+    margin: 0px;
+}
+
+.grey_star {
+    color: grey;
 }
