--- a/style.css
+++ b/style.css
@@ -9,9 +9,12 @@ body {
 }
 
 a {
+    text-decoration: none;
+}
+
+.link {
     margin: 10px;
     color: black;
-    text-decoration: none;
     font-size: 1.2em;
 }
 
@@ -131,18 +134,16 @@ li {
 .heb {
     box-shadow: 2px 2px 2px grey;
     border: 5px solid white;
-    width: 30%;
-    height: 200px;
     overflow: hidden;
     display: flex;
+    height: 200px;
     flex-direction: column;
     margin: 0px;
     padding: 0px;
 }
 
-.h2_heb {
-    color: black;
-    margin: 0px;
+.h2_pop {
+    margin-right: 2%;
 }
 
 .div_heb {
@@ -198,7 +199,6 @@ li {
 .li_pop {
     box-shadow: 2px 2px 2px grey;
     border: 5px solid white;
-    width: 90%;
     height: 135px;
     overflow: hidden;
     display: flex;
@@ -253,7 +253,6 @@ li {
 .li_act {
     box-shadow: 2px 2px 2px grey;
     border: 0px solid white;
-    width: 23%;
     height: 400px;
     overflow: hidden;
     display: flex;
@@ -315,4 +314,16 @@ section {
 .div_title {
     display: flex;
     align-items: flex-start;
+}
+
+.a_heb {
+    width: 30%;
+}
+
+.a_pop {
+    width: 90%;
+}
+
+.a_act {
+    width: 23%;
 }
