--- a/style.css
+++ b/style.css
@@ -58,6 +58,7 @@ button {
 .filtres {
     margin-top: 2%;
     font-weight: bold;
+    margin-bottom: 2%;
 }
 
 .nav_header {
@@ -87,11 +88,14 @@ li {
     margin-left: 1%;
 }
 
-.fa-map-marker-alt {
+.icon {
     background-color: #F2F2F2;
-    padding: 14px;
+    padding: 1.05%;
     border-top-left-radius: 10px;
     border-bottom-left-radius: 10px;
+}
+
+.fa-map-marker-alt {
     color: black;
 }
 
@@ -110,11 +114,12 @@ li {
 
 .fa-info {
     border:1px solid grey;
-    padding: 10px;
-    padding-left: 15px;
-    padding-right: 15px;
+    padding: 5px;
+    padding-left: 10px;
+    padding-right: 10px;
     border-radius: 100%;
     margin-right: 1%;
+    margin-top: 1%;
 }
 
 .hebergement {
@@ -271,6 +276,9 @@ li {
     background-color: #F2F2F2;
     display: flex;
     align-items: flex-start;
+    margin-left: 3%;
+    margin-bottom: -2%;
+    width: 94%;
 }
 
 .content_foot {
@@ -350,11 +358,13 @@ section {
     }
 
     .link_one {
-        margin-right: 20%;
+        margin-right: 15%;
+        font-size: 1em;
     }
 
     .link_two {
-        margin-left: 20%;
+        margin-left: 15%;
+        font-size: 1em;
     }
 
     .title {
@@ -365,11 +375,99 @@ section {
         font-size: 1.2em;
     }
 
+    .icon {
+        padding: 2.75%;
+    }
+
     input {
         padding: 2.5%;
     }
 
     button {
         padding: 3%;
+    }
+
+    .filtres {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .h3_f {
+        margin-bottom: 0px;
+    }
+
+    .fil {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 10px;
+    }
+
+    .li_fil {
+        display: inline;
+        width: 39%;
+        margin: 0px;
+        padding: 10px;
+    }
+
+    .p_f {
+        font-size: 0.5em;
+    }
+
+    .fa-info {
+        margin-top: 2%;
+    }
+
+    .div_heb_pop {
+        display: flex;
+        flex-direction: column-reverse;
+    }
+
+    .div_pop {
+        margin: 0;
+        margin-left: -2%;
+        padding: 0;
+        width: 104%;
+        border-radius: 0%;
+    }
+
+    .fa-chart-line {
+        margin-left: 30%;
+        margin-top: 6%;
+    }
+
+    .div_heb, section {
+        background-color: white;
+        border: 0px;
+        margin: 0;
+        margin-left: -2%;
+        padding: 0;
+        width: 104%;
+        border-radius: 0%;
+        display: flex;
+        flex-direction: column;
+    }
+
+    .a_heb {
+        width: 90%;
+    }
+
+    .a_act {
+        width: 90%;
+    }
+
+    .li_act {
+        height: 200px;
+    }
+
+    .div_foot {
+        margin-left: -2%;
+        width: 104%;
+        display: flex;
+        flex-direction: column;
+    }
+
+    .content_foot {
+        width: 100%;
+        margin-top: 10%;
     }
 }
