--- a/style.css
+++ b/style.css
@@ -50,6 +50,14 @@ button {
     font-weight: bold;
 }
 
+.li_heb {
+    width: 30%;
+}
+
+.li_pop {
+    width: 90%;
+}
+
 li {
     list-style: none;
 }
@@ -69,13 +77,17 @@ li {
     justify-content: space-between;
 }
 
+.li_fil {
+    padding: 1%;
+}
+
 .fil {
     list-style: none;
     display: inline-block;
     width: 100%;
 }
 
-.heb, .li_pop, .li_act {
+.heb, .art_pop, .art_act, .li_fil {
     display: inline;
     border:1px solid grey;
     border-radius: 30px;
@@ -144,6 +156,7 @@ input {
     flex-direction: column;
     margin: 0px;
     padding: 0px;
+    width: 100%;
 }
 
 .h2_pop {
@@ -200,7 +213,7 @@ input {
     gap: 10px;
 }
 
-.li_pop {
+.art_pop {
     box-shadow: 2px 2px 2px grey;
     border: 5px solid white;
     height: 135px;
@@ -254,7 +267,11 @@ input {
     gap: 10px;
 }
 
-.li_act {
+.p_heb {
+    font-weight: bold;
+}
+
+.art_act {
     box-shadow: 2px 2px 2px grey;
     border: 0px solid white;
     height: 400px;
@@ -310,6 +327,7 @@ section {
 
 .title {
     font-size: 1.5em;
+    font-weight: bold;
 }
 
 .fa-chart-line {
@@ -323,15 +341,7 @@ section {
     align-items: flex-start;
 }
 
-.a_heb {
-    width: 30%;
-}
-
-.a_pop {
-    width: 90%;
-}
-
-.a_act {
+.li_act {
     width: 23%;
 }
 
@@ -356,7 +366,7 @@ section {
         flex-direction: initial;
     }
 
-    .a_pop {
+    .li_pop {
         width: 30%;
     }
 
@@ -369,7 +379,7 @@ section {
         margin-top: 3%;
     }
 
-    .li_act {
+    .art_act {
         height: 250px;
     }
 }
@@ -486,15 +496,15 @@ section {
         flex-direction: column;
     }
 
-    .a_heb {
-        width: 90%;
-    }
-
-    .a_act {
+    .li_heb {
         width: 90%;
     }
 
     .li_act {
+        width: 90%;
+    }
+
+    .art_act {
         height: 200px;
     }
 
