--- a/style.css
+++ b/style.css
@@ -1,11 +1,14 @@
 .nav_header {
-    margin: 3%;
-    padding: 3%;
+    height: 80px;
     justify-content: space-between;
+    display: flex;
+    align-items: end;
 }
 
 body {
     font-family: Raleway;
+    margin: 0;
+    padding-left: 40px;
 }
 
 input {
@@ -18,18 +21,25 @@ a {
 
 .but_head {
     width: 25%;
+    display: flex;
+    align-items: end;
+    height: 97%;
 }
 
 .link_one, .link_two {
     color: black;
     font-size: 1.2em;
-    padding-left: 5%;
-    padding-right: 5%;
+    height: 100%;
+    width: 50%;
+    padding-left: 5px;
+    padding-right: 5px;
+    display: flex;
+    align-items: end;
+    justify-content: center;
 }
 
 .link_one:hover, .link_two:hover {
     border-top: 5px solid #0065FC;
-    padding-top: 26.5%;
 }
 
 a:hover {
@@ -37,13 +47,8 @@ a:hover {
 }
 
 .logo {
-    width: 10%;
-    margin: 0;
+    width: 80px;
     padding: 0;
-}
-
-h1, h2, .h3_f, form, .end_header {
-    margin-left: 3%;
 }
 
 h2, .h3_heb {
@@ -60,13 +65,12 @@ button {
     color: white;
     border-top-right-radius: 10px;
     border-bottom-right-radius: 10px;
-    padding: 1.2%;
+    padding: 14px;
     font-weight: bold;
 }
 
 .li_heb {
-    width: 28%;
-    margin-bottom: 3%;
+    width: 30%;
 }
 
 .li_pop {
@@ -77,15 +81,15 @@ li {
     list-style: none;
 }
 
-.filtres, .nav_header, form, .end_header {
+.filtres, form, .end_header {
     display: flex;
     align-items: flex-start;
 }
 
 .filtres {
-    margin-top: 2%;
+    margin-top: 20px;
     font-weight: bold;
-    margin-bottom: 2%;
+    margin-bottom: 20px;
 }
 
 .nav_header {
@@ -93,7 +97,7 @@ li {
 }
 
 .li_fil {
-    padding: 1%;
+    padding: 10px;
 }
 
 .fil {
@@ -106,22 +110,33 @@ li {
     display: inline;
     border:1px solid grey;
     border-radius: 20px;
-    margin-right: 1%;
-    margin-bottom: 1%;
+    margin-right: 10px;
+}
+
+h1.title {
+    margin-top: 60px;
+}
+
+ul.act {
+    padding: 0;
 }
 
 .p_f {
-    margin: 1%;
+    margin: 10px;
 }
 
 .fas, .fa-solid {
     color: #0065FC;
-    margin-left: 1%;
+    margin-left: 10px;
+}
+
+.fas.fa-map-marker-alt {
+    margin-left: 0;
 }
 
 .icon {
     background-color: #F2F2F2;
-    padding: 1.05%;
+    padding: 13px;
     border-top-left-radius: 10px;
     border-bottom-left-radius: 10px;
 }
@@ -131,7 +146,7 @@ li {
 }
 
 input {
-    padding: 1%;
+    padding: 12px;
 }
 
 .li_fil:hover {
@@ -144,8 +159,9 @@ input {
     padding-left: 10px;
     padding-right: 10px;
     border-radius: 100%;
-    margin-right: 1%;
-    margin-top: 1%;
+    margin-right: 10px;
+    margin-left: 0;
+    margin-top: 10px;
 }
 
 .hebergement {
@@ -175,18 +191,13 @@ input {
     width: 95%;
 }
 
-.h2_pop {
-    margin-right: 2%;
-}
-
 .div_heb {
     border:1px solid #F2F2F2;
     background-color: #F2F2F2;
     border-radius: 30px;
     float: left;
     width: 60%;
-    margin-left: 3%;
-    margin-bottom: 5%;
+    margin-bottom: 50px;
 }
 
 .div_pop {
@@ -195,8 +206,8 @@ input {
     border-radius: 30px;
     width: 30%;
     float: right;
-    margin-right: 3%;
-    margin-bottom: 5%;
+    margin-right: 30px;
+    margin-bottom: 50px;
 }
 
 .div_heb_pop {
@@ -207,9 +218,8 @@ input {
 .carte {
     display: flex;
     flex-wrap: wrap;
-    gap: 5%;
-    margin: 0%;
-    padding-left: 3%;
+    gap: 25px;
+    padding-left: 30px;
 }
 
 .écrit_carte {
@@ -228,9 +238,8 @@ input {
 .carte_pop {
     display: flex;
     flex-direction: column;
-    gap: 10px;
-    margin-left: 6%;
-    padding: 0%;
+    margin-left: 30px;
+    padding: 0;
 }
 
 .art_pop {
@@ -241,7 +250,7 @@ input {
     overflow: hidden;
     display: flex;
     margin: 0px;
-    margin-bottom: 5%;
+    margin-bottom: 30px;
     padding: 0px;
 }
 
@@ -264,34 +273,29 @@ img {
     object-fit: cover;
 }
 
-.h2_heb, .h2_pop, .h2_act {
+.h2_heb, .h2_pop, .h2_act, .h3_heb, .h3_pop {
     font-size: 1em;
     color: black;
     padding: 0px;
     margin-top: 0px;
-    margin-bottom: 5%;
-    margin-left: 5%;
+    margin-left: 10px;
     font-weight: bold;
 }
 
 .h3_heb, .h3_pop {
     font-size: 0.8em;
-    color: black;
-    padding: 0px;
-    margin-top: 0px;
-    margin-left: 5%;
-    margin-bottom: 5%;
     font-weight: normal;
 }
 
 .first {
-    margin-left: 5%;
+    margin-left: 10px;
 }
 
 .act {
     display: flex;
     flex-wrap: wrap;
     gap: 10px;
+    margin-bottom: 80px;
 }
 
 .p_heb {
@@ -320,15 +324,13 @@ img {
     background-color: #F2F2F2;
     display: flex;
     align-items: flex-start;
-    margin-left: 3%;
-    margin-bottom: -2%;
     width: 94%;
 }
 
 .content_foot {
-    margin-top: 3%;
+    margin-top: 30px;
     width: 30%;
-    margin-left: 8%;
+    margin-left: 100px;
 }
 
 .h2_foot {
@@ -337,7 +339,6 @@ img {
     padding: 0px;
     margin-top: 0px;
     margin-left: 0px;
-    margin-bottom: 5%;
     font-weight: bold;
 }
 
@@ -349,26 +350,24 @@ img {
     font-weight: normal;
 }
 
-section {
-    margin-bottom: 5%;
-}
-
 .title {
     font-size: 1.5em;
     font-weight: bold;
-    margin-left: 3%;
+}
+
+#inside {
+    margin-left: 30px;
 }
 
 .fa-chart-line {
     float: right;
-    margin-left: 23%;
-    margin-top: 6%;
+    margin-left: 70px;
+    margin-top: 28px;
 }
 
 .div_title {
     display: flex;
     align-items: flex-start;
-    margin-left: 3%;
 }
 
 .li_act {
@@ -425,7 +424,12 @@ section {
     .logo {
         margin-left: auto;
         margin-right: auto;
-        margin-bottom: 10%;
+        margin-top: 30px;
+        margin-bottom: 30px;
+    }
+
+    body {
+        padding-left: 0;
     }
 
     .link_one:hover {
@@ -439,72 +443,58 @@ section {
     .nav_header {
         display: flex;
         flex-direction: column;
+        margin-bottom: 90px;
     }
 
     .but_head {
         text-align: center;
         display: flex;
         align-items: flex-start;
-        width: 118%;
-        margin-left: -9%;
-    }
-
-    input {
-        width: 80%;
+        width: 100%;
+        margin-left: 0;
+        margin-bottom: 30px;
     }
 
     .link_one {
         font-size: 1em;
-        margin-left: -8%;
-        padding-right: 25%;
-        padding-left: 20%;
-        padding-bottom: 5%;
+        padding-right: 40px;
+        padding-left: 50px;
+        padding-bottom: 20px;
         border-bottom: 2px solid #F2F2F2;
     }
 
     .link_one:hover, .link_two:hover {
         border-bottom: 2px solid #0065FC;
         border-top: 0px solid #0065FC;
-        padding-top: 0%;
     }
 
     .act {
-        padding: 0%;
-        margin-left: 5%;
+        padding: 0;
+        margin-left: 20px;
     }
 
     .link_two {
         font-size: 1em;
-        margin-left: -16%;
-        padding-right: 30%;
-        padding-left: 10%;
-        padding-bottom: 5%;
+        padding-right: 60px;
+        padding-left: 40px;
+        padding-bottom: 20px;
         border-bottom: 2px solid #F2F2F2;
     }
 
     .title {
         font-size: 1.5em;
+        margin-left: 20px;
     }
     
     .s_title {
         font-size: 1.2em;
-    }
-
-    .icon {
-        padding: 2.75%;
-    }
-
-    input {
-        padding: 2.5%;
-    }
-
-    button {
-        padding: 3%;
+        margin-left: 20px;
     }
 
     .filtres {
         display: flex;
         flex-direction: column;
+        margin-left: 20px;
     }
 
     .h3_f {
@@ -515,8 +505,15 @@ section {
         display: flex;
         flex-wrap: wrap;
         gap: 10px;
-        padding: 0%;
-        margin-left: 3%;
+        padding: 0;
+    }
+
+    form {
+        margin-left: 20px;
+    }
+
+    .end_header {
+        margin-left: 20px;
     }
 
     .li_fil {
@@ -524,16 +521,15 @@ section {
         align-items: center;
         width: 39%;
         margin: 0px;
-        padding: 2%;
+        padding: 5px;
+    }
+
+    .h1.title {
+        margin-top: 0;
     }
 
     .p_f {
         font-size: 0.5em;
-        margin-left: 5%;
-    }
-
-    .fa-info {
-        margin-top: 2%;
     }
 
     .div_heb_pop {
@@ -543,27 +539,41 @@ section {
 
     .div_pop {
         margin: 0;
-        margin-left: -2%;
         padding: 0;
-        width: 104%;
+        width: 100%;
         border-radius: 0%;
     }
 
     .fa-chart-line {
-        margin-left: 30%;
-        margin-top: 6%;
+        margin-left: 110px;
     }
 
     .div_heb, section {
         background-color: white;
         border: 0px;
         margin: 0;
-        margin-left: -2%;
         padding: 0;
-        width: 104%;
+        width: 100%;
         border-radius: 0%;
         display: flex;
         flex-direction: column;
+    }
+
+    .carte_pop {
+        margin-left: 20px;
+    }
+
+    .p_heb {
+        color: white;
+    }
+
+    .carte {
+        margin-left: 20px;
+        padding: 0;
+    }
+
+    #inside {
+        margin-left: 20px;
     }
 
     .li_heb {
@@ -579,18 +589,18 @@ section {
     }
 
     .div_foot {
-        margin-left: -2%;
-        width: 104%;
+        width: 100%;
         display: flex;
         flex-direction: column;
     }
 
     .content_foot {
         width: 100%;
-        margin-top: 10%;
+        margin-top: 30px;
+        margin-left: 20px;
     }
 
-    .div_heb {
-        margin-left: 2%;
+    .heb {
+        width: 100%;
     }
 }
